# stonks

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
grafana_dashboards/: example_gemels.json
stonks/: admin.py  apps.py  models.py  serializers.py  views.py
stonks/gmail_fetcher/: __main__.py
stonks/migrations/: 0001_initial.py  0002_remove_swiftnessdeposit_swiftness_deposit_primary_key_and_more.py  0003_banktransaction_bankstate_and_more.py
stonks/swiftness_parsing/: extractor.py  normalizer.py
stonks_app/: asgi.py  settings.py  urls.py  wsgi.py
stonks_banks/: bank-dumper.service  bank-dumper.timer  get_bank_state.sh
stonks_banks/dumper/: index.js  package-lock.json  package.json
stonks_banks/puppeteer_linux_aarch64/: Dockerfile
